<resources>
    <string name="app_name">MySimpleClick</string>
    <string name="hello_world">Hello World!</string>
    <string name="new_button_1">New Button 1</string>
    <string name="new_button_2">New Button 2</string>
    <string name="new_button_3">New Button 3</string>
    <string name="toast_1">Naciśnięto przycisk 1</string>
    <string name="toast_2">Naciśnięto przycisk 2</string>
    <string name="toast_3">Naciśnięto przycisk 3</string>
    <string name="menu_1">Opcja menu 1</string>
    <string name="menu_2">Opcja menu 2</string>
    <string name="action_about">O aplikacji</string>
    <string name="start_new_activity">Uruchom nową aktywność</string>
    <string name="second_activity">Drugie activity</string>
    <string name="start_browser">Uruchom przeglądarkę</string>
</resources>
