<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/marycha"
    tools:context="com.example.tutorial.marcin.mysimpleclick.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wackowy"
        android:text="@string/hello_world"
        android:textScaleX="2"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_button_1"

        android:textScaleX="2"
        android:id="@+id/button1"
        android:textAllCaps="false"
        android:onClick="onClickButton3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_button_2"
        android:id="@+id/button2"
        android:onClick="onClickButton3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_button_3"
        android:textAllCaps="true"
        android:id="@+id/button3"
        android:onClick="onClickButton3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Podpowiedź to android:hint"
        android:background="@color/ladny"
        android:singleLine="true"
        android:id="@+id/edittext1"
        android:textColor="@color/pedalski" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_new_activity"
        android:onClick="onClickStartSecondActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_browser"
        android:onClick="onClickStartBrowser"/>

<!--    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Tymczasowy dla obejrzenia ScrollView"/>

        </LinearLayout>


    </ScrollView>-->
</LinearLayout>
